--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -222,11 +222,10 @@ body {
 
 .main-header .menu ul a {
   text-decoration: none;
-  font-weight: 700;
+  font-weight: 600;
   color: #fff;
   transition: 0.4s all;
   padding-right: 10px;
-  padding-bottom: 6px;
 }
 
 .main-header .menu ul button a {
@@ -255,16 +254,17 @@ body {
 
 .diagnostico a {
   background: var(--light-pink);
-  font-weight: 600;
+  font-weight: 500;
   color: #fff;
-  padding: 10px 15px;
+  padding: 15px 20px;
   border-radius: 50px;
   transition: 0.2s all;
 }
 
 .diagnostico img {
   padding: 0 5px;
-  vertical-align: top;
+  vertical-align: middle;
+  width: 12%;
 }
 
 .diagnostico a:hover {
@@ -566,6 +566,8 @@ hr {
   -ms-flex-pack: center;
   justify-content: center;
   padding-top: 30px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -596,8 +598,8 @@ hr {
   background-size: cover;
   background-repeat: no-repeat;
   background-clip: content-box;
-  height: 379px;
-  width: 294px;
+  height: 377px;
+  width: 292px;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: center;
@@ -612,7 +614,10 @@ hr {
   color: #fff;
   z-index: 1;
   align-self: center;
-  vertical-align: middle;
+}
+
+.solucoes .sistemas-boxes .box:hover {
+  width: 390px;
 }
 
 .solucoes .sistemas-boxes .box a {
@@ -623,9 +628,8 @@ hr {
 .solucoes .sistemas-boxes .box .title {
   text-align: center;
   z-index: 1;
-  font-size: 32px;
+  font-size: 26px;
   font-weight: bold;
-  text-transform: uppercase;
   margin-top: 50px;
 }
 
@@ -659,12 +663,9 @@ hr {
   opacity: 0.2;
 }
 
-
 .solucoes .sistemas-boxes .box:hover .overlay-box {
   background-color: var(--green-poussee);
 }
-
-
 
 .sistemas__button {
   font-weight: 700;
@@ -679,7 +680,7 @@ hr {
 .buscando {
   background: #000;
   color: #fff;
-  padding: 30px 15px;
+  padding: 30px 30px;
 }
 
 .buscando .col-sm {
@@ -694,12 +695,21 @@ hr {
   margin-bottom: 1em;
 }
 
-.buscando p {
+.buscando .list-solutions ul li{
+  text-align: center;
+  display: inline;
+  align-items:flex-end;
+  padding: 5px 15px;
+}
+
+
+.buscando .list-solutions ul li a {
   color: #fff;
-  font-size: 10px;
+  font-size: 14px;
   font-weight: 700;
   margin-bottom: 1em;
   text-decoration: none;
+  justify-content: space-between;
     line-height: 2.15;
     display: inline-flex;
     -webkit-box-align: center;
@@ -715,7 +725,7 @@ hr {
       , transparent, transparent);
 }
 
-.buscando p:hover {
+.buscando .list-solutions ul li a:hover {
   color: var(--green-poussee);
   cursor: pointer;
   text-decoration: none;
@@ -761,9 +771,6 @@ hr {
 }
 
 
-
-
-
 @media (max-width: 768px) {
  
   .marcas .row .text-white {
@@ -784,7 +791,7 @@ hr {
 /* Section-2 marcas */
 
 .marcas  {
-  padding-top: 100px;
+  padding-top: 10px;
   padding-bottom: 200px;
   text-align: center;
 }
@@ -860,12 +867,55 @@ header, section .we-help {
 .we-help {
   background: var(--green-poussee);
   padding: 100px 0px;
+  color: #000;
 }
+
+.we-help {
+  background: var(--green-poussee);
+  padding: 100px 0px;
+  color: #000;
+}
+
+.we-help hr {
+  border: 1px solid;
+  border-radius: 20%!important;
+  border-top: 4px solid #000!important;
+  width: 50px;
+  display: inline-block;
+}
+
 
 .we-help .foto-quem img {
   width: 90%;
   margin-top: -180px;
   z-index: 1;
+}
+
+.floater-detail {
+  position: absolute;
+  width: 50%;
+  top: 3000px;
+  left: 0;
+  z-index: 0;
+  opacity: 0.5;
+}
+
+.floater-detail2 {
+  position: absolute;
+  width: 50%;
+  left: 25%;
+  transform: rotate(90deg);
+  z-index: -1;
+  opacity: 0.5;
+}
+
+.floater-detail3 {
+  position: absolute;
+  width: 50%;
+  right: 0%;
+  transform: rotate(180deg);
+  z-index: 0;
+  opacity: 0.5;
 }
 
 /* equipe */
@@ -902,7 +952,7 @@ header, section .we-help {
 .cases {
   background: url("/assets/img/banner-cases.png") no-repeat;
   background-position: top;
-  background-size: auto;
+  background-size:contain;
   color: #fff;
   padding: 100px 0px;
 }
@@ -990,7 +1040,7 @@ header, section .we-help {
 
 .seja .notebook img {
   width: 100%;
-  margin-top: -200px;
+  margin-top: -180px;
   z-index: 1;
 }
 
@@ -1000,6 +1050,11 @@ header, section .we-help {
   font-size: 36px;
   font-weight: 700;
   line-height: 3rem;
+}
+
+.home-text{
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .text-white {
@@ -1081,275 +1136,13 @@ header, section .we-help {
 
 /* -------------------- */
 
-/* Section-2 produtos */
 
-.vantagens {
-  background: url("/assets/img/bg-gradient.png");
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: cover;
-  height: auto;
-  overflow-y: hidden;
-  padding: 100px 0;
-}
 
-.features {
-  padding-left: 16em;
-  padding-right: 8em;
-}
 
-.vantagens .features ul li {
-  color: #fff;
-  margin-bottom: 5px;
-  font-size: 18px;
-  font-weight: 500;
-  text-decoration: none;
-}
-
-.vantagens .features {
-  padding-left: 16em;
-}
-
-.vantagens .features ul li {
-  margin-bottom: 5px;
-}
-
-@media only screen and (max-width: 768px) {
-  .vantagens .features {
-    padding: 0 1em;
-  }
-
-  .features {
-    padding: 0 1em;
-  }
-}
-
-.players {
-  padding: 0 15em;
-}
-
-@media only screen and (max-width: 768px) {
-  .players {
-    padding: initial;
-  }
-}
-
-/* Section trabalhe */
-
-.trabalhe {
-  background-color: #acacac;
-  background-image: url("../img/trabalhe-roge.jpg");
-  background-size: cover;
-  background-position: center;
-  background-blend-mode: overlay;
-  width: 100%;
-  height: 90vh;
-  position: relative;
-}
-
-.trabalhe .row .text-blue {
-  padding: 15vmin 10vmin 10vmin 10vmin;
-}
-
-.trabalhe .text-blue {
-  color: #00377b;
-}
-
-.trabalhe .text-blue h2 {
-  font-size: 42px;
-  font-weight: 900;
-  line-height: 3rem;
-  text-transform: uppercase;
-}
-
-.trabalhe .text-blue h3 {
-  color: #0099ff;
-  font-size: 24px;
-  font-weight: 900;
-  line-height: 2rem;
-  text-transform: uppercase;
-}
-
-.trabalhe .text-blue p {
-  color: var(--light-black);
-  font-size: 20px;
-  font-weight: 500;
-  margin-top: 10px;
-  text-decoration: none;
-}
-
-.trabalhe .text-blue a {
-  color: var(--light-black);
-  border-color: var(--light-black);
-}
-
-@media only screen and (max-width: 768px) {
-  .fundacao {
-    height: auto;
-  }
-
-  .fundacao .row .text-white {
-    padding: 5vmin 5vmin;
-    text-align: center;
-  }
-
-  .trabalhe {
-    background-position: right;
-  }
-
-  .trabalhe .row .text-blue {
-    text-align: center;
-  }
-}
-
-.forms {
-  padding: 10vmin 0;
-}
-
-/* Section-2 fazemos */
-
-.fazemos {
-  background-size: cover;
-  background-position: auto;
-  width: 100%;
-  height: auto;
-  padding: 10vmin 0;
-}
-
-.fazemos .row .text-white {
-  padding: 0vmin 0vmin 5vmin 0vmin;
-}
-
-.fazemos .row .logomarcas {
-  padding: 0vmin 25vmin;
-}
-
-.fazemos .text-white h2 {
-  font-size: 24px;
-  font-weight: 900;
-  line-height: 3rem;
-  text-transform: uppercase;
-}
-
-.fazemos h3 {
-  color: var(--purple-gil);
-  font-size: 42px;
-  font-weight: 500;
-  line-height: 3rem;
-}
-
-.text-yellow {
-  color: var(--yellow-gil);
-}
-
-.text-purple {
-  color: var(--purple-gil);
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 2rem;
-}
-
-.fazemos p {
-  color: var(--purple-gil);
-  font-size: 20px;
-  font-weight: 500;
-  margin-top: 10px;
-  text-decoration: none;
-}
-
-.fazemos img {
-  border-radius: 8px;
-  transition: all ease 0.4s;
-  margin: 2em;
-}
-
-.fazemos img:hover {
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
-}
-
-.card-horizontal {
-  display: flex;
-  flex: 1 1 auto;
-}
-
-.fazemos .card {
-  border: 0px solid transparent;
-}
-
-@media only screen and (max-width: 768px) {
-  .fazemos .processo img {
-    width: 80vw;
-  }
-}
-
-/* Social */
-
-.social {
-  background-color: var(--light-black);
-  color: #fff;
-  align-items: center;
-  text-decoration: none;
-  overflow-y: hidden;
-}
-
-.social .row .brand {
-  text-align: left;
-}
-
-.social .row .siga {
-  text-align: left;
-  align-self: center;
-}
-
-.botoes {
-  margin-bottom: 0px;
-}
-
-.botoes button {
-  background: transparent;
-  border-right: 1px solid #0c0c0c;
-  padding: 20px 25px;
-  text-decoration: none;
-}
-
-.botoes button:hover {
-  background: #0c0c0c;
-  border-right: 1px solid #0c0c0c;
-  cursor: pointer;
-}
-
-.botoes li:first-child {
-  border-left: 1px solid #0c0c0c;
-  margin-left: 8px;
-}
-
-.list-inline-item:not(:last-child) {
-  margin-right: 0px !important;
-}
-
-.social i {
-  align-items: center;
-  padding-right: 6px;
-}
 
 /* Forms */
 
-.forms input {
-  border-bottom: 1px solid var(--purple-gil);
-  border-top: transparent;
-  border-left: transparent;
-  border-right: transparent;
-  border-radius: initial;
-}
 
-.forms textarea {
-  border-bottom: 1px solid var(--purple-gil);
-  border-top: transparent;
-  border-left: transparent;
-  border-right: transparent;
-  border-radius: initial;
-}
 
 /* Footer */
 
@@ -1366,6 +1159,13 @@ header, section .we-help {
 .footer p a {
   color: #000;
   text-decoration: none;
+  font-weight: 600;
+  transition: transform 1s;
+}
+
+.footer p a:hover {
+  color: #000;
+  font-weight: 700;
 }
 
 .footer-size {
@@ -1375,6 +1175,12 @@ header, section .we-help {
 .footer-icons {
   width: 100%;
   text-align: center;
+  transition: transform 1s;
+}
+
+.footer-icons img:hover {
+  transition: ease 0.3s;
+  transform: scale(1.1);
 }
 
 .footer-icons li {
@@ -1383,20 +1189,24 @@ header, section .we-help {
     margin: 10px 10px;
 }
 
-.btn-cadastrar:hover {
-  background: #a7a7a7;
+.float {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25d366;
+  color: #FFF;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  z-index: 999;
 }
 
-.marcasMais {
-  display: flex;
-  align-items: center;
-}
-
-.marcasMais img {
-  max-width: 100%;
-  display: block;
-  width: 170px;
-  margin: 0 auto;
+.float i {
+  color: #fff;
+  text-decoration: none;
+  padding-top: 14px;
 }
 
 /* The flip card container */
