--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -123,7 +123,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: "";
+  content: '';
   content: none;
 }
 
@@ -146,9 +146,9 @@ section {
 }
 
 :root {
-  --Montserrat: "Montserrat", sans-serif;
-  --green-poussee: #59CB59;
-  --black-poussee: #201E1E;
+  --Montserrat: 'Montserrat', sans-serif;
+  --green-poussee: #59cb59;
+  --black-poussee: #201e1e;
   --light-pink: #fd6699;
   --yellow-bold: #ffc10e;
   --purple-grey: #4d366d;
@@ -165,7 +165,7 @@ html {
 }
 
 body {
-  font-family: "Montserrat", sans-serif !important;
+  font-family: 'Montserrat', sans-serif !important;
   font-size: 16px;
   font-weight: 600;
   background-color: #fff;
@@ -183,23 +183,40 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
-  
+  background: #f1f1f1;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: #888;
   border-radius: 15px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: #555;
+}
+
+@keyframes animaArrow {
+  from {
+    right: 10px;
+  }
+
+  to {
+    left: 0px;
+  }
+}
+
+.solucoes > span {
+  margin-left: 50px;
+  font-size: 38px;
+  display: block;
+  position: relative;
+  animation: animaArrow 0.8s ease-in 0s infinite alternate;
 }
 
 .main-header {
-  background: url("/assets/img/banner-home.png") no-repeat bottom;
+  background: url('/assets/img/banner-home.png') no-repeat bottom;
   background-size: cover;
   height: 100vh;
   padding-top: 1%;
@@ -207,71 +224,73 @@ body {
 }
 
 .bg-ecommerce {
-  background: url("../img/o-que-fazemos/ecommerce-header.png") no-repeat center;
+  background: url('../img/o-que-fazemos/ecommerce-header.png') no-repeat center;
   background-size: cover;
   height: 70vh;
 }
 
 .bg-anuncio {
-  background: url("../img/o-que-fazemos/anuncios-header.png") no-repeat center;
+  background: url('../img/o-que-fazemos/anuncios-header.png') no-repeat center;
   background-size: cover;
   height: 70vh;
 }
 
 .bg-branding {
-  background: url("../img/o-que-fazemos/branding-header.png") no-repeat center;
+  background: url('../img/o-que-fazemos/branding-header.png') no-repeat center;
   background-size: cover;
   height: 70vh;
 }
 
 .bg-desenvolvimento {
-  background: url("../img/o-que-fazemos/desenvolvimento-header.png") no-repeat center;
+  background: url('../img/o-que-fazemos/desenvolvimento-header.png') no-repeat
+    center;
   background-size: cover;
   height: 70vh;
 }
 
 .bg-full-service {
-  background: url("../img/o-que-fazemos/fullService-header.png") no-repeat center;
+  background: url('../img/o-que-fazemos/fullService-header.png') no-repeat
+    center;
   background-size: cover;
   height: 70vh;
 }
 
 .bg-inbound-marketing {
-  background: url("../img/o-que-fazemos/inbound-header.png") no-repeat center;
+  background: url('../img/o-que-fazemos/inbound-header.png') no-repeat center;
   background-size: cover;
   height: 70vh;
 }
 
 .bg-seo {
-  background: url("../img/o-que-fazemos/seo-header.png") no-repeat center;
+  background: url('../img/o-que-fazemos/seo-header.png') no-repeat center;
   background-size: cover;
   height: 70vh;
 }
 
 .bg-social-media {
-  background: url("../img/o-que-fazemos/socialMedia-header.png") no-repeat center;
+  background: url('../img/o-que-fazemos/socialMedia-header.png') no-repeat
+    center;
   background-size: cover;
   height: 70vh;
 }
 
 .bg-nossa-historia {
-  background: url("../img/quem-somos/nossaHistoria-banner.png") no-repeat center;
+  background: url('../img/quem-somos/nossaHistoria-banner.png') no-repeat center;
   background-size: cover;
   height: 90vh;
 }
 
 .bg-nosso-time {
-  background: url("../img/quem-somos/nossoTime-banner.png") no-repeat center;
+  background: url('../img/quem-somos/nossoTime-banner.png') no-repeat center;
   background-size: cover;
   height: 90vh;
 }
 
 .bg-contato {
-  background: url("../img/contato/contato-banner.png") no-repeat center;
+  background: url('../img/contato/contato-banner.png') no-repeat center;
   background-size: cover;
   height: 90vh;
 }
-
 
 .menu {
   background-color: transparent;
@@ -300,19 +319,18 @@ body {
   display: none;
   float: left;
   min-width: 10rem;
-  padding: .5rem 0;
-  margin: .125rem 0 0;
+  padding: 0.5rem 0;
+  margin: 0.125rem 0 0;
   font-size: 1rem;
-  color: #212529!important;
+  color: #201e1e !important;
   text-align: left;
   list-style: none;
   background-clip: padding-box;
-  border: 1px solid rgba(0,0,0,.15);
-  border-radius: .25rem;
-    box-shadow: 0 0px 32px rgb(56 37 37 / 6%), 0 0px 10px rgb(0 0 0 / 5%);
-    background-color: rgba(0, 0, 0, 0.9)!important;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 0.25rem;
+  box-shadow: 0 0px 32px rgb(56 37 37 / 6%), 0 0px 10px rgb(0 0 0 / 5%);
+  background-color: white !important;
 }
-
 
 .main-header .menu ul a {
   text-decoration: none;
@@ -340,24 +358,27 @@ body {
 
 .main-header .menu .active {
   color: #fff;
-  border-bottom: 2px solid #59CB59;
+  border-bottom: 2px solid #59cb59;
   border-radius: 3px;
 }
 
 .main-header .menu .dropdown .active {
   color: #fff;
-  border-bottom: 2px solid #59CB59;
+  border-bottom: 2px solid #59cb59;
   border-radius: 2px;
 }
 
+.dropdown-menu .nav-item > a {
+  color: var(--black-poussee) !important;
+}
+
+.dropdown-menu .nav-item > a:hover {
+  color: #59cb59 !important;
+}
 
 .main-header .menu ul a:hover img {
   transform: scale(1.1);
 }
-
-
-
-
 
 .diagnostico a {
   background: var(--light-pink);
@@ -375,14 +396,14 @@ body {
 }
 
 .diagnostico a:hover {
-  color: #fff  !important;
+  color: #fff !important;
   text-decoration: none;
   background: #ff94b8;
 }
 
 @media (max-width: 768px) {
   .main-header {
-    background: url("/assets/img/banner-home.png") no-repeat center;
+    background: url('/assets/img/banner-home.png') no-repeat center;
     background-size: cover;
     background-color: #b1b1b1;
     background-blend-mode: darken;
@@ -392,71 +413,75 @@ body {
   }
 
   .bg-ecommerce {
-    background: url("../img/o-que-fazemos/ecommerce-header.png") no-repeat center;
+    background: url('../img/o-que-fazemos/ecommerce-header.png') no-repeat
+      center;
     background-size: cover;
     height: 70vh;
   }
 
   .bg-anuncio {
-    background: url("../img/o-que-fazemos/anuncios-header.png") no-repeat center;
+    background: url('../img/o-que-fazemos/anuncios-header.png') no-repeat center;
     background-size: cover;
     height: 70vh;
   }
 
   .bg-branding {
-    background: url("../img/o-que-fazemos/branding-header.png") no-repeat center;
+    background: url('../img/o-que-fazemos/branding-header.png') no-repeat center;
     background-size: cover;
     height: 70vh;
   }
 
   .bg-desenvolvimento {
-    background: url("../img/o-que-fazemos/desenvolvimento-header.png") no-repeat center;
+    background: url('../img/o-que-fazemos/desenvolvimento-header.png') no-repeat
+      center;
     background-size: cover;
     height: 70vh;
   }
 
   .bg-full-service {
-    background: url("../img/o-que-fazemos/fullService-header.png") no-repeat center;
+    background: url('../img/o-que-fazemos/fullService-header.png') no-repeat
+      center;
     background-size: cover;
     height: 70vh;
   }
 
   .bg-inbound-marketing {
-    background: url("../img/o-que-fazemos/inbound-header.png") no-repeat center;
+    background: url('../img/o-que-fazemos/inbound-header.png') no-repeat center;
     background-size: cover;
     height: 70vh;
   }
 
   .bg-seo {
-    background: url("../img/o-que-fazemos/seo-header.png") no-repeat center;
+    background: url('../img/o-que-fazemos/seo-header.png') no-repeat center;
     background-size: cover;
     height: 70vh;
   }
 
   .bg-social-media {
-    background: url("../img/o-que-fazemos/socialMedia-header.png") no-repeat center;
+    background: url('../img/o-que-fazemos/socialMedia-header.png') no-repeat
+      center;
     background-size: cover;
     height: 70vh;
   }
 
   .bg-nossa-historia {
-    background: url("../img/quem-somos/nossaHistoria-banner.png") no-repeat center;
+    background: url('../img/quem-somos/nossaHistoria-banner.png') no-repeat
+      center;
     background-size: cover;
     height: 70vh;
   }
 
   .bg-nosso-time {
-    background: url("../img/quem-somos/nossoTime-banner.png") no-repeat center;
+    background: url('../img/quem-somos/nossoTime-banner.png') no-repeat center;
     background-size: cover;
     height: 70vh;
   }
 
   .bg-contato {
-    background: url("../img/contato/contato-banner.png") no-repeat center;
+    background: url('../img/contato/contato-banner.png') no-repeat center;
     background-size: cover;
     height: 70vh;
   }
-
 }
 
 .header-home h1 {
@@ -470,17 +495,16 @@ body {
 }
 
 hr {
-	border: 0;
+  border: 0;
   border-radius: 20%;
-	border-top: 4px solid #59CB59 !important;
+  border-top: 4px solid #59cb59 !important;
   width: 50px;
   display: inline-block;
 }
 
 .subtitle {
   text-transform: uppercase;
-  font-weight: 700!important;
-  
+  font-weight: 700 !important;
 }
 
 .btn-red {
@@ -551,22 +575,22 @@ hr {
   color: var(--green-poussee);
   font-weight: 700;
   text-decoration: none;
-    line-height: 2.15;
-    display: inline-flex;
-    -webkit-box-align: center;
-    align-items: center;
-    background-repeat: no-repeat;
-    background-position: 0px 100%, 100% 100%;
-    background-size: 0px 8%, 100% 8%;
-    transition: background-size 0.2s ease-in-out 0s;
-    background-image: linear-gradient(
-      120deg
-      , rgb(89, 203, 89) 0%, rgb(89, 203, 89) 100%), linear-gradient(
-      120deg
-      , transparent, transparent);
-      margin-right: 20px;
+  line-height: 2.15;
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  background-repeat: no-repeat;
+  background-position: 0px 100%, 100% 100%;
+  background-size: 0px 8%, 100% 8%;
+  transition: background-size 0.2s ease-in-out 0s;
+  background-image: linear-gradient(
+      120deg,
+      rgb(89, 203, 89) 0%,
+      rgb(89, 203, 89) 100%
+    ),
+    linear-gradient(120deg, transparent, transparent);
+  margin-right: 20px;
 }
-
 
 .btn-green img {
   margin-left: 12px;
@@ -579,7 +603,6 @@ hr {
   background-size: 100% 8%, 100% 8%;
 }
 
-
 .btn-green a {
   color: var(--green-poussee);
 }
@@ -589,25 +612,21 @@ hr {
   text-decoration: none;
 }
 
-.btn-black{
+.btn-black {
   color: #000;
   font-weight: 700;
   text-decoration: none;
-    line-height: 2.15;
-    display: inline-flex;
-    -webkit-box-align: center;
-    align-items: center;
-    background-repeat: no-repeat;
-    background-position: 0px 100%, 100% 100%;
-    background-size: 0px 8%, 100% 8%;
-    transition: background-size 0.2s ease-in-out 0s;
-    background-image: linear-gradient(
-      120deg
-      , rgb(0, 0, 0) 0%, rgb(0, 0, 0) 100%), linear-gradient(
-      120deg
-      , transparent, transparent);
+  line-height: 2.15;
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  background-repeat: no-repeat;
+  background-position: 0px 100%, 100% 100%;
+  background-size: 0px 8%, 100% 8%;
+  transition: background-size 0.2s ease-in-out 0s;
+  background-image: linear-gradient(120deg, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 100%),
+    linear-gradient(120deg, transparent, transparent);
 }
-
 
 .btn-black img {
   margin-left: 12px;
@@ -619,7 +638,6 @@ hr {
   text-decoration: none;
   background-size: 100% 8%, 100% 8%;
 }
-
 
 .btn-black a {
   color: var(--green-poussee);
@@ -634,21 +652,21 @@ hr {
   color: #fff;
   font-weight: 700;
   text-decoration: none;
-    line-height: 2.15;
-    display: inline-flex;
-    -webkit-box-align: center;
-    align-items: center;
-    background-repeat: no-repeat;
-    background-position: 0px 100%, 100% 100%;
-    background-size: 0px 8%, 100% 8%;
-    transition: background-size 0.2s ease-in-out 0s;
-    background-image: linear-gradient(
-      120deg
-      , rgb(255, 255, 255) 0%, rgb(255, 255, 255) 100%), linear-gradient(
-      120deg
-      , transparent, transparent);
+  line-height: 2.15;
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  background-repeat: no-repeat;
+  background-position: 0px 100%, 100% 100%;
+  background-size: 0px 8%, 100% 8%;
+  transition: background-size 0.2s ease-in-out 0s;
+  background-image: linear-gradient(
+      120deg,
+      rgb(255, 255, 255) 0%,
+      rgb(255, 255, 255) 100%
+    ),
+    linear-gradient(120deg, transparent, transparent);
 }
-
 
 .btn-white img {
   margin-left: 12px;
@@ -771,7 +789,7 @@ hr {
 }
 
 .solucoes .sistemas-boxes .box .text {
-  text-align: center; 
+  text-align: center;
   z-index: 1;
   font-size: 16px;
   margin-top: 30px;
@@ -832,13 +850,12 @@ hr {
   margin-bottom: 1em;
 }
 
-.buscando .list-solutions ul li{
+.buscando .list-solutions ul li {
   text-align: center;
   display: inline;
-  align-items:flex-end;
+  align-items: flex-end;
   padding: 5px 15px;
 }
-
 
 .buscando .list-solutions ul li a {
   color: #fff;
@@ -847,19 +864,20 @@ hr {
   margin-bottom: 1em;
   text-decoration: none;
   justify-content: space-between;
-    line-height: 2.15;
-    display: inline-flex;
-    -webkit-box-align: center;
-    align-items: center;
-    background-repeat: no-repeat;
-    background-position: 0px 100%, 100% 100%;
-    background-size: 0px 8%, 100% 8%;
-    transition: background-size 0.2s ease-in-out 0s;
-    background-image: linear-gradient(
-      120deg
-      , rgb(89, 203, 89) 0%, rgb(89, 203, 89) 100%), linear-gradient(
-      120deg
-      , transparent, transparent);
+  line-height: 2.15;
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  background-repeat: no-repeat;
+  background-position: 0px 100%, 100% 100%;
+  background-size: 0px 8%, 100% 8%;
+  transition: background-size 0.2s ease-in-out 0s;
+  background-image: linear-gradient(
+      120deg,
+      rgb(89, 203, 89) 0%,
+      rgb(89, 203, 89) 100%
+    ),
+    linear-gradient(120deg, transparent, transparent);
 }
 
 .buscando .list-solutions ul li a:hover {
@@ -869,10 +887,9 @@ hr {
   background-size: 100% 8%, 100% 8%;
 }
 
-
 .confiar {
   padding-top: 100px;
-  background: url("/assets/img/bg-gradient.png");
+  background: url('/assets/img/bg-gradient.png');
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
@@ -907,10 +924,9 @@ hr {
   text-decoration: none;
 }
 
-
 /* Section-2 marcas */
 
-.marcas  {
+.marcas {
   padding-top: 10px;
   padding-bottom: 200px;
   text-align: center;
@@ -920,6 +936,15 @@ hr {
   background: var(--green-poussee);
   padding: 100px 0;
   text-align: center;
+}
+
+.marcas .container > hr {
+  margin-top: -20px;
+  margin-bottom: 20px;
+}
+
+.marcas .container > .subtitle {
+  font-size: 18px !important;
 }
 
 .marcas-time .montadoras .logo {
@@ -986,7 +1011,7 @@ hr {
 
 .marcas .montadoras i.right-arrow {
   right: -180px;
-  background-image: url("/assets/img/quem-somos/setaCarrosel-dir.png");
+  background-image: url('/assets/img/quem-somos/setaCarrosel-dir.png');
 }
 
 @media only screen and (max-width: 600px) {
@@ -995,10 +1020,9 @@ hr {
   }
 }
 
-
 .marcas .montadoras i.left-arrow {
   left: -120px;
-  background-image: url("/assets/img/quem-somos/setaCarrossel-esq.png");
+  background-image: url('/assets/img/quem-somos/setaCarrossel-esq.png');
 }
 
 @media only screen and (max-width: 600px) {
@@ -1008,7 +1032,8 @@ hr {
 }
 
 /* we help */
-header, section .we-help {
+header,
+section .we-help {
   overflow-x: auto;
 }
 
@@ -1026,12 +1051,11 @@ header, section .we-help {
 
 .we-help hr {
   border: 1px solid;
-  border-radius: 20%!important;
-  border-top: 4px solid #000!important;
+  border-radius: 20% !important;
+  border-top: 4px solid #000 !important;
   width: 50px;
   display: inline-block;
 }
-
 
 .we-help .foto-quem img {
   width: 90%;
@@ -1043,7 +1067,7 @@ header, section .we-help {
   position: absolute;
   width: 50%;
   top: 3000px;
-  left: 0;
+  left: -120px;
   z-index: 0;
   opacity: 0.5;
 }
@@ -1104,13 +1128,20 @@ header, section .we-help {
   padding: 100px 0px;
 }
 
-.equipe .text-equipe  {
+.equipe .text-equipe {
   width: 60%;
   display: grid;
   align-self: center;
+  position: relative;
 }
 
-.equipe .foto-equipe  {
+.equipe .text-equipe > hr {
+  position: absolute;
+  top: 20px;
+  left: 15px;
+}
+
+.equipe .foto-equipe {
   width: 60%;
   display: grid;
   align-self: center;
@@ -1128,9 +1159,9 @@ header, section .we-help {
 /* cases */
 
 .cases {
-  background: url("/assets/img/banner-cases.png") no-repeat;
+  background: url('/assets/img/banner-cases.png') no-repeat;
   background-position: top;
-  background-size:inherit;
+  background-size: inherit;
   color: #fff;
   padding: 100px 0px;
 }
@@ -1172,13 +1203,14 @@ header, section .we-help {
 }
 
 .cases .card-green .card .card-body hr {
-    border-top: 4px solid #000 !important;
+  border-top: 4px solid #000 !important;
 }
 
 .cases .card-green .card .card-body .card-title {
   text-transform: uppercase;
   text-decoration: none;
   font-style: normal;
+  font-weight: 900;
 }
 
 .cases .card-black .card .card-body .card-title {
@@ -1258,13 +1290,13 @@ header, section .we-help {
 
 /* texts */
 
-.home-title{
+.home-title {
   font-size: 36px;
   font-weight: 700;
   line-height: 3rem;
 }
 
-.home-text{
+.home-text {
   font-size: 18px;
   font-weight: 600;
 }
@@ -1319,7 +1351,6 @@ header, section .we-help {
   text-decoration: none;
 }
 
-
 /* Section-2 produtos */
 
 .produtos {
@@ -1358,9 +1389,9 @@ header, section .we-help {
 
 .nosso-time .card-time {
   border: none;
-  -webkit-box-shadow: inset 0px -160px 27px -50px rgba(0,0,0,0.3);
-  -moz-box-shadow: inset 0px -160px 27px -50px rgba(0,0,0,0.3);
-  box-shadow: inset 0px -160px 27px -50px rgba(0,0,0,0.3);
+  -webkit-box-shadow: inset 0px -160px 27px -50px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: inset 0px -160px 27px -50px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0px -160px 27px -50px rgba(0, 0, 0, 0.3);
   transition: all 0.2s;
 }
 
@@ -1369,7 +1400,7 @@ header, section .we-help {
   transform: scale(1.05);
 }
 
-.nosso-time .info-time  {
+.nosso-time .info-time {
   padding: 1em 1em;
   text-align: center;
 }
@@ -1413,7 +1444,7 @@ header, section .we-help {
 
 .item-solution {
   min-width: 250px;
-  max-width: 33%!important;
+  max-width: 33% !important;
   margin: 15px 0;
 }
 
@@ -1459,7 +1490,6 @@ header, section .we-help {
   margin-top: 10px;
 }
 
-
 /* Footer */
 
 .footer {
@@ -1501,8 +1531,13 @@ header, section .we-help {
 
 .footer-icons li {
   cursor: pointer;
-    display: inline-block;
-    margin: 10px 10px;
+  display: inline-block;
+  margin: 10px 10px;
+}
+
+.copy-right {
+  font-size: 15px !important;
+  font-weight: 500 !important;
 }
 
 .float {
@@ -1512,7 +1547,7 @@ header, section .we-help {
   bottom: 20px;
   right: 20px;
   background-color: #25d366;
-  color: #FFF;
+  color: #fff;
   border-radius: 50px;
   text-align: center;
   font-size: 30px;
@@ -1550,7 +1585,8 @@ header, section .we-help {
 }
 
 /* Position the front and back side */
-.flip-card-front, .flip-card-back {
+.flip-card-front,
+.flip-card-back {
   position: absolute;
   width: 100%;
   height: 100%;
