tarefa concluida do dia 13/04, resolvidos bugs relacionados ao comentário do card

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1110,10 +1110,14 @@ section .we-help {
 	position: absolute;
 	width: 50%;
 	top: auto;
-	margin-top: -750px;
+	margin-top: -700px;
 	left: 0;
 	z-index: -1;
 	opacity: 0.5;
+}
+
+.floater-detail-historia img {
+	width: 180px;
 }
 
 .floater-detail-time {
@@ -1640,4 +1644,100 @@ section .we-help {
 .title-adjustment hr {
 	margin-left: 0;
 	margin-right: auto;
+}
+
+.contact-form {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	width: 70%;
+	margin-top: 50px;
+}
+
+.form-content-container > div {
+	margin-bottom: 10px;
+}
+
+.contact-form .column-div {
+	display: flex;
+	flex-direction: column;
+}
+
+.contact-form textarea,
+.contact-form input {
+	outline: none;
+}
+
+.contact-form input {
+	border: 2px solid #59cb59;
+
+	border-top: none;
+	border-left: none;
+	border-right: none;
+}
+
+.contact-form textarea {
+	border: 2px solid #59cb59;
+
+	height: 150px;
+	padding-left: 5px;
+
+	border-top: none;
+	border-right: none;
+}
+
+.contact-checkbox {
+	position: relative;
+}
+
+.contact-form .inline-div {
+	display: flex;
+	margin: 10px 0;
+}
+
+.contact-form .inline-div label {
+	margin-left: 10px;
+}
+
+.contact-checkbox input {
+	-webkit-appearance: none;
+	background-color: #fafafa;
+	border: 2px solid #59cb59;
+	display: inline-block;
+	position: relative;
+
+	height: 30px;
+	width: 30px;
+	margin-top: 3px;
+}
+
+.contact-checkbox input:checked {
+	background-color: #59cb59;
+	border: 2px solid #59cb59;
+	color: white;
+}
+
+.contact-checkbox input:checked:after {
+	content: '\2714';
+	font-size: 20px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: white;
+}
+
+.contact-form button {
+	margin: 10px auto 0 auto;
+	padding: 10px 40px;
+
+	background-color: #59cb59;
+	color: black;
+	font-weight: bold;
+	border-radius: 50px;
+}
+
+.our-history-correction {
+	padding-left: 0 !important;
 }
